# irrotational-warp-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPLETE_SESSION_SUMMARY.md  NOTES.md  RELEASING.md  TASKS.md  VALIDATION.md  session-progress-2026-01-17-continued.md  session-progress-2026-01-17.md
docs/history/: history.md
papers/: irrotational_warp_metric.bib  irrotational_warp_metric.tex
scripts/: analyze_experiment.py  check_gpu.py  compare_sources.py  make_paper_figures.py  plot_superluminal.py  profile_3d.py  reproduce_rodal_exact.py  sweep_superluminal.py  test_bayesian_optimization.py  validate_celmaster_rubin.py
src/irrotational_warp/: __init__.py  adm.py  cli.py  einstein.py  io.py  optimize.py  potential.py  sourcing.py  sweep.py  tail.py  validate_lentz.py  viz.py
tests/: test_basics.py  test_einstein.py  test_invariants.py  test_optimize.py  test_sourcing.py  test_sweep_2d.py  test_tail.py
